<resources>
    <string name="app_name">ECMOutBoundMarketing</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="cast_and_community"><![CDATA[Caste & Community]]></string>
    <string name="name">Name<font fgcolor='#FF0000'>*</font></string>
    <string name="email">Email Id<font fgcolor='#FF0000'>*</font></string>
    <string name="gender">Gender<font fgcolor='#FF0000'>*</font></string>
    <string name="date_of_birth">Date of Birth<font fgcolor='#FF0000'>*</font></string>
    <string name="blood_group">Blood Group<font fgcolor='#FF0000'>*</font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hospital_admission_description">Quickly refer patients for hospital admission through \nthe app. Connect with trusted hospitals easily and \nensure fast, secure care.</string>
    <string name="ambulance_booking_description">Book an ambulance with ease, anytime you need urgent \nmedical help. Fast response and reliable \nservice at your doorstep.</string>
    <string name="diagnostic_referral_description">Easily refer patients for diagnostic tests through the app.\n Connect with trusted labs for quick, reliable reports and\n hassle-free service.</string>
    <string name="insurance_pre_auth_description">Easily send insurance pre-auth requests and get faster \napprovals for patient treatment.</string>
    <string name="hospital_assistance_description">Get complete hospital assistance for patients—from admission to discharge. Our team ensures smooth coordination, timely\n updates, and support at every step.</string>
    <string name="panel_advisors">Panel Advisors</string>
    <string name="companies">Companies</string>
    <string name="my_leads">My Leads</string>
    <string name="health_advisors">Health Advisors</string>
    <string name="client_relations_executive_outbound_marketing">Client Relations Executive Outbound Marketing</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_found">No Notifications Found!</string>
    <string name="request_ambulance">Request Ambulance</string>
    <string name="refer_an_admission">Refer an Admission</string>
    <string name="refer_a_diagnostics">Refer a Diagnostics</string>
    <string name="send_insurance_pre_auth">Send Insurance Pre-Auth</string>
    <string name="hospital_assistance">Hospital Assistance</string>
    <string name="add_user">Add User</string>
    <string name="doctors">Doctors</string>
    <string name="out_bound_mkt_team">Out-Bound MKT Team</string>
    <string name="health_talks">Health Talks</string>
    <string name="hospital_blogs">Hospital Blogs</string>
    <string name="my_health_advisors">My Health Advisors</string>
    <string name="rewards">Rewards</string>
    <string name="task_vs_performance">Task vs Performance</string>
    <string name="gallery">Gallery</string>
    <string name="daily_report">Daily Report</string>
    <string name="health_media">Health Media</string>
    <string name="search">Search</string>
    <string name="insurance_coverage_amount">Insurance Coverage Amount</string>
    <string name="enter">Enter</string>
    <string name="enter_name">Enter Name</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="select">Select</string>
    <string name="profession">Profession</string>
    <string name="employee">Employee</string>
    <string name="business">Business</string>
    <string name="others">Others</string>
    <string name="total_family_members">Total Family members</string>
    <string name="address">Address</string>
    <string name="treatment_status">Treatment Status</string>
    <string name="personal_insurance">Personal Insurance</string>
    <string name="company_sponsored">Company Sponsored</string>
    <string name="health_insurance_details">Health Insurance Details</string>
    <string name="insurance_company_name">Insurance Company Name</string>
    <string name="tpa_name">TPA Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="request_leads">Request Leads</string>
    <string name="no_of_persons_covered">No. of Persons Covered</string>
    <string name="company_name">Company Name</string>
    <string name="submit">Submit</string>
    <string name="number_of_employees">Number of Employees</string>
    <string name="company_contacts">Company Contacts</string>
    <string name="age">Age</string>
    <string name="designation">Designation</string>
    <string name="health_tracks">Health Tracks</string>
    <string name="medical_camps">Medical Camps</string>
    <string name="annual_health_checkups">Annual Health Checkups</string>
    <string name="pre_employment_checkups">Pre-Employment Checkups</string>
    <string name="company_medical_needs">Company Medical Needs</string>
    <string name="category">Category</string>
    <string name="health_advisor_s_task">Health Advisor\'s Task</string>
    <string name="request_advisors">Request Advisors</string>
    <string name="degree">Degree</string>
    <string name="organisation">Organisation</string>
    <string name="panel_company">Panel Company</string>
    <string name="location">Location</string>
    <string name="hospital_doctors">Hospital Doctors</string>
    <string name="events">Events</string>
    <string name="medical_camp">Medical Camp</string>
    <string name="kiosk_camp">KIOSK Camp</string>
    <string name="health_talk">Health Talk</string>
    <string name="cme_program">CME Program</string>
    <string name="add_event">Add Event</string>
    <string name="organiser">Organiser</string>
    <string name="contact_person">Contact Person</string>
    <string name="event_incharge">Event Inancel">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="notes">Notes</string>
    <string name="daily_reports">Daily Reports</string>
    <string name="to_do_list">To-Do-List</string>
    <string name="add_plan">Add Plan</string>
    <string name="digital_branding">Digital Branding</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="phone">Phone</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="promo_coupons">Promo Coupons</string>
    <string name="company_employees">Company Employees</string>
    <string name="bank_employees">Bank Employees</string>
    <string name="request_reference">Request Reference</string>
    <string name="single_cover">Single Cover</string>
    <string name="family_cover">Family Cover</string>
    <string name="add_photo">Add Photo</string>
    <string name="team_connect">Team Connect</string>
    <string name="testimonial_videos">Testimonial Videos</string>
</resources>