<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EventCategoriesActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            app:srcCompat="@drawable/white_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/events"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_event_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/medical_camp_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/lato"
                        android:padding="20dp"
                        android:text="@string/medical_camp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/kiosk_camp_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/lato"
                        android:padding="20dp"
                        android:text="@string/kiosk_camp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/health_talk_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/lato"
                        android:padding="20dp"
                        android:text="@string/health_talk"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/cme_program_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/lato"
                        android:padding="20dp"
                        android:text="@string/cme_program"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/others_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/lato"
                        android:padding="20dp"
                        android:text="@string/others"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_event_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:padding="12dp"
        android:text="@string/add_event"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>