<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEventActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            app:srcCompat="@drawable/white_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/add_event"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/organiser"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:padding="16dp"
                        android:textSize="14dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/lato"
                        android:textColorHint="@color/gray"
                        android:hint="@string/enter"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Camp Place"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:padding="16dp"
                        android:textSize="14dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/lato"
                        android:textColorHint="@color/gray"
                        android:hint="@string/enter"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Date"
                                android:layout_marginTop="12dp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/lato"/>

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_text_bg"
                                android:padding="16dp"
                                android:textSize="14dp"
                                android:layout_marginTop="6dp"
                                android:fontFamily="@font/lato"
                                android:textColorHint="@color/gray"
                                android:hint="@string/enter"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Time"
                                android:layout_marginTop="12dp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/lato"/>

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edit_text_bg"
                                android:padding="16dp"
                                android:textSize="14dp"
                                android:layout_marginTop="6dp"
                                android:fontFamily="@font/lato"
                                android:textColorHint="@color/gray"
                                android:hint="@string/enter"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_person"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:padding="16dp"
                        android:textSize="14dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/lato"
                        android:textColorHint="@color/gray"
                        android:hint="@string/enter"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_incharge"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:padding="16dp"
                        android:textSize="14dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/lato"
                        android:textColorHint="@color/gray"
                        android:hint="@string/enter"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_photo"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"/>
                    
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/cam_square"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/medical_camp"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kiosk_camp"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/health_talk"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cme_program"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/others"/>

                    </RadioGroup>

                    <ImageView
                        android:id="@+id/add_event_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/add_event_btn"/>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>