<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_lo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_iv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/customer_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/camera_img"
                        app:layout_constraintEnd_toEndOf="@id/profile_iv"
                        app:layout_constraintBottom_toBottomOf="@id/profile_iv"
                        android:layout_margin="6dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="Ganesh"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Number"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:id="@+id/contact_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="9000000000"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="ganesh@gmail.com"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/gender_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="Male"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/date_of_birth_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="04-04-1998"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/blood_group_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:text="B+"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="16dp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>